--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  scroll-behavior: smooth;
+  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+  color-scheme: dark;
+}
+
+.hash-span {
+  margin-top: -100px;
+  padding-bottom: 100px;
+  display: block;
+}
+footer {
+  text-align: center;
+  color: #ffffff; /* Text color */
+  font-size: 14px;
+  /* position: fixed; Or 'relative' for static positioning */
+  bottom: 0;
+  width: 100%;
 }
 
 body {
